objects/CMPL123QMS__Hazard_Type__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hazard Type</label>
    <listViews>
        <fullName>CMPL123QMS__All_Hazard_Type</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Short_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HZTP-{00000}</displayFormat>
        <label>Hazard Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hazard Types</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Hazard_Type</fullName>
        <active>true</active>
        <label>Hazard Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>